--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -1,6 +1,6 @@
 /* Container */
 .home-container {
-  font-family: 'Inter', sans-serif;
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #f9fafb;
   min-height: 100vh;
 }
